--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -42,15 +42,50 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
+          <object class="GtkBox">
+            <property name="margin">12</property>
+            <property name="orientation">vertical</property>
+            <property name="visible">true</property>
+            <style>
+              <class name="linked"/>
+            </style>
             <child>
-              <object class="DspyTreeView" id="introspection_tree_view">
+              <object class="GtkScrolledWindow">
+                <property name="shadow-type">in</property>
+                <property name="vexpand">True</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <child internal-child="selection">
-                  <object class="GtkTreeSelection"/>
+                <child>
+                  <object class="DspyTreeView" id="introspection_tree_view">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <child internal-child="selection">
+                      <object class="GtkTreeSelection"/>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkBox">
+                <property name="orientation">horizontal</property>
+                <property name="visible">true</property>
+                <style>
+                  <class name="inline-toolbar"/>
+                </style>
+                <child>
+                  <object class="GtkButton" id="refresh_button">
+                    <property name="visible">true</property>
+                    <style>
+                      <class name="image-button"/>
+                    </style>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="icon-name">view-refresh-symbolic</property>
+                        <property name="visible">true</property>
+                      </object>
+                    </child>
+                  </object>
                 </child>
               </object>
             </child>
