--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -77,22 +77,27 @@
                   </object>
                 </child>
                 <child>
-                  <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
+                  <object class="DzlBin">
                     <property name="visible">true</property>
                     <style>
                       <class name="inline-toolbar"/>
                     </style>
                     <child>
-                      <object class="GtkButton" id="refresh_button">
+                      <object class="GtkBox">
+                        <property name="orientation">horizontal</property>
                         <property name="visible">true</property>
-                        <style>
-                          <class name="image-button"/>
-                        </style>
                         <child>
-                          <object class="GtkImage">
-                            <property name="icon-name">view-refresh-symbolic</property>
+                          <object class="GtkButton" id="refresh_button">
                             <property name="visible">true</property>
+                            <style>
+                              <class name="image-button"/>
+                            </style>
+                            <child>
+                              <object class="GtkImage">
+                                <property name="icon-name">view-refresh-symbolic</property>
+                                <property name="visible">true</property>
+                              </object>
+                            </child>
                           </object>
                         </child>
                       </object>
@@ -102,8 +107,8 @@
               </object>
             </child>
             <child>
-              <object class="GtkRevealer">
-                <property name="reveal-child">true</property>
+              <object class="GtkRevealer" id="method_revealer">
+                <property name="reveal-child">false</property>
                 <property name="visible">true</property>
                 <child>
                   <object class="DspyMethodView" id="method_view">
