--- a/lib/dspy-method-view.ui
+++ b/lib/dspy-method-view.ui
@@ -115,7 +115,7 @@
                 <property name="hscrollbar-policy">never</property>
                 <property name="visible">true</property>
                 <child>
-                  <object class="GtkTextView">
+                  <object class="GtkTextView" id="textview_params">
                     <property name="buffer">buffer_params</property>
                     <property name="wrap-mode">char</property>
                     <property name="visible">true</property>
