--- a/lib/dspy-method-view.ui
+++ b/lib/dspy-method-view.ui
@@ -113,6 +113,8 @@
                 <property name="hexpand">true</property>
                 <property name="shadow-type">in</property>
                 <property name="hscrollbar-policy">never</property>
+                <property name="propagate-natural-height">true</property>
+                <property name="max-content-height">100</property>
                 <property name="visible">true</property>
                 <child>
                   <object class="GtkTextView" id="textview_params">
@@ -158,6 +160,8 @@
             <property name="hexpand">true</property>
             <property name="shadow-type">in</property>
             <property name="hscrollbar-policy">never</property>
+            <property name="propagate-natural-height">true</property>
+            <property name="max-content-height">100</property>
             <property name="visible">true</property>
             <child>
               <object class="GtkTextView">
