--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -19,19 +19,70 @@
         <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <child>
-          <object class="GtkScrolledWindow">
-            <property name="propagate-natural-width">True</property>
-            <property name="max-content-width">400</property>
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
+          <object class="GtkBox">
+            <property name="orientation">vertical</property>
+            <property name="visible">true</property>
+            <style>
+              <class name="view"/>
+            </style>
             <child>
-              <object class="GtkViewport">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
+              <object class="GtkBox">
+                <property name="margin">6</property>
+                <property name="homogeneous">true</property>
+                <property name="orientation">horizontal</property>
+                <property name="visible">true</property>
+                <style>
+                  <class name="linked"/>
+                </style>
                 <child>
-                  <object class="GtkListBox" id="names_list_box">
+                  <object class="GtkRadioButton" id="bus_radio">
+                    <property name="label" translatable="yes">System</property>
+                    <property name="draw-indicator">false</property>
+                    <property name="visible">true</property>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkRadioButton">
+                    <property name="label" translatable="yes">Session</property>
+                    <property name="draw-indicator">false</property>
+                    <property name="group">bus_radio</property>
+                    <property name="visible">true</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="label" translatable="yes">Connection Names</property>
+                <property name="visible">true</property>
+                <property name="xalign">0.0</property>
+                <property name="margin-start">6</property>
+                <style>
+                  <class name="dim-label"/>
+                </style>
+                <attributes>
+                  <attribute name="weight" value="bold"/>
+                  <attribute name="scale" value=".833333"/>
+                </attributes>
+              </object>
+            </child>
+            <child>
+              <object class="GtkScrolledWindow">
+                <property name="propagate-natural-width">True</property>
+                <property name="max-content-width">300</property>
+                <property name="vexpand">True</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <child>
+                  <object class="GtkViewport">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <child>
+                      <object class="GtkListBox" id="names_list_box">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
