--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -57,6 +57,7 @@
                 <property name="visible">true</property>
                 <property name="xalign">0.0</property>
                 <property name="margin-start">6</property>
+                <property name="margin-bottom">1</property>
                 <style>
                   <class name="dim-label"/>
                 </style>
