--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -35,17 +35,17 @@
                   <class name="linked"/>
                 </style>
                 <child>
-                  <object class="GtkRadioButton" id="bus_radio">
-                    <property name="label" translatable="yes">System</property>
+                  <object class="GtkRadioButton" id="session_button">
+                    <property name="label" translatable="yes">Session</property>
                     <property name="draw-indicator">false</property>
                     <property name="visible">true</property>
                   </object>
                 </child>
                 <child>
-                  <object class="GtkRadioButton">
-                    <property name="label" translatable="yes">Session</property>
+                  <object class="GtkRadioButton" id="system_button">
+                    <property name="label" translatable="yes">System</property>
                     <property name="draw-indicator">false</property>
-                    <property name="group">bus_radio</property>
+                    <property name="group">session_button</property>
                     <property name="visible">true</property>
                   </object>
                 </child>
@@ -68,7 +68,7 @@
               </object>
             </child>
             <child>
-              <object class="GtkScrolledWindow">
+              <object class="GtkScrolledWindow" id="names_scroller">
                 <property name="propagate-natural-width">True</property>
                 <property name="max-content-width">300</property>
                 <property name="vexpand">True</property>
