--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -52,6 +52,16 @@
               </object>
             </child>
             <child>
+              <object class="GtkSearchEntry" id="search_entry">
+                <property name="placeholder-text" translatable="yes">Search Connections</property>
+                <property name="margin-top">6</property>
+                <property name="margin-start">6</property>
+                <property name="margin-end">6</property>
+                <property name="margin-bottom">12</property>
+                <property name="visible">true</property>
+              </object>
+            </child>
+            <child>
               <object class="GtkLabel">
                 <property name="label" translatable="yes">Connection Names</property>
                 <property name="visible">true</property>
