--- a/lib/dspy-method-view.ui
+++ b/lib/dspy-method-view.ui
@@ -156,18 +156,34 @@
           </packing>
         </child>
         <child>
-          <object class="GtkScrolledWindow">
+          <object class="GtkBox">
+            <property name="orientation">horizontal</property>
             <property name="hexpand">true</property>
-            <property name="shadow-type">in</property>
-            <property name="hscrollbar-policy">never</property>
-            <property name="propagate-natural-height">true</property>
-            <property name="max-content-height">100</property>
             <property name="visible">true</property>
+            <style>
+              <class name="linked"/>
+            </style>
             <child>
-              <object class="GtkTextView">
-                <property name="buffer">buffer_reply</property>
-                <property name="wrap-mode">char</property>
-                <property name="editable">false</property>
+              <object class="GtkScrolledWindow">
+                <property name="hexpand">true</property>
+                <property name="shadow-type">in</property>
+                <property name="hscrollbar-policy">never</property>
+                <property name="propagate-natural-height">true</property>
+                <property name="max-content-height">100</property>
+                <property name="visible">true</property>
+                <child>
+                  <object class="GtkTextView">
+                    <property name="buffer">buffer_reply</property>
+                    <property name="wrap-mode">char</property>
+                    <property name="editable">false</property>
+                    <property name="visible">true</property>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child>
+              <object class="GtkButton" id="copy_button">
+                <property name="label" translatable="yes">Copy</property>
                 <property name="visible">true</property>
               </object>
             </child>
@@ -182,4 +198,11 @@
   </template>
   <object class="GtkTextBuffer" id="buffer_params"/>
   <object class="GtkTextBuffer" id="buffer_reply"/>
+  <object class="GtkSizeGroup">
+    <property name="mode">horizontal</property>
+    <widgets>
+      <widget name="button"/>
+      <widget name="copy_button"/>
+    </widgets>
+  </object>
 </interface>
