src: remove shadow line on right

--- a/src/themes/shared.css
+++ b/src/themes/shared.css
@@ -1,3 +1,6 @@
 dzlmultipaned > :first-child {
   border-right: 1px solid @borders;
 }
+box.linked > scrolledwindow:first-child {
+  border-right: none;
+}
