--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -23,6 +23,7 @@
             <property name="orientation">vertical</property>
             <property name="visible">true</property>
             <style>
+              <class name="sidebar"/>
               <class name="view"/>
             </style>
             <child>
@@ -62,19 +63,38 @@
               </object>
             </child>
             <child>
-              <object class="GtkLabel">
-                <property name="label" translatable="yes">Connection Names</property>
+              <object class="GtkBox">
+                <property name="orientation">horizontal</property>
                 <property name="visible">true</property>
-                <property name="xalign">0.0</property>
-                <property name="margin-start">6</property>
-                <property name="margin-bottom">1</property>
-                <style>
-                  <class name="dim-label"/>
-                </style>
-                <attributes>
-                  <attribute name="weight" value="bold"/>
-                  <attribute name="scale" value=".833333"/>
-                </attributes>
+                <child>
+                  <object class="GtkLabel">
+                    <property name="label" translatable="yes">Connection Names</property>
+                    <property name="hexpand">true</property>
+                    <property name="visible">true</property>
+                    <property name="xalign">0.0</property>
+                    <property name="margin-start">6</property>
+                    <property name="margin-bottom">1</property>
+                    <style>
+                      <class name="dim-label"/>
+                    </style>
+                    <attributes>
+                      <attribute name="weight" value="bold"/>
+                      <attribute name="scale" value=".833333"/>
+                    </attributes>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkMenuButton" id="menu_button">
+                    <property name="focus-on-click">false</property>
+                    <property name="visible">true</property>
+                    <child>
+                      <object class="GtkImage">
+                        <property name="icon-name">pan-down-symbolic</property>
+                        <property name="visible">true</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
             </child>
             <child>
