src: tweak wording for bus

--- a/src/gtk/menus.ui
+++ b/src/gtk/menus.ui
@@ -2,7 +2,7 @@
 <interface>
   <menu id="connections-menu">
     <item>
-      <attribute name="label" translatable="yes">Connect to Bus</attribute>
+      <attribute name="label" translatable="yes">Connect to Other Bus</attribute>
       <attribute name="action">win.connect-to-bus</attribute>
     </item>
   </menu>
