--- a/src/themes/shared.css
+++ b/src/themes/shared.css
@@ -4,11 +4,12 @@ dzlmultipaned > :first-child {
 box.linked.horizontal > scrolledwindow:first-child {
   border-right: none;
 }
-.sidebar button.popup {
+.sidebar button.popup.toggle {
   border: none;
   border-radius: 0px;
   background: none;
   box-shadow: none;
+  padding: 0px 6px;
 }
 .sidebar button:not(:hover) image {
   color: alpha(currentColor, 0.6);
