--- a/lib/gtk/menus.ui
+++ b/lib/gtk/menus.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <menu id="connections-menu">
+  <menu id="dspy-connections-menu">
     <item>
       <attribute name="label" translatable="yes">Connect to Other Bus</attribute>
       <attribute name="action">dspy.connect-to-bus</attribute>
