upate sources from Builder

--- a/lib/dspy-method-view.ui
+++ b/lib/dspy-method-view.ui
@@ -119,7 +119,7 @@
                 <child>
                   <object class="GtkTextView" id="textview_params">
                     <property name="buffer">buffer_params</property>
-                    <property name="wrap-mode">char</property>
+                    <property name="wrap-mode">word-char</property>
                     <property name="visible">true</property>
                   </object>
                 </child>
@@ -174,7 +174,7 @@
                 <child>
                   <object class="GtkTextView">
                     <property name="buffer">buffer_reply</property>
-                    <property name="wrap-mode">char</property>
+                    <property name="wrap-mode">word-char</property>
                     <property name="editable">false</property>
                     <property name="visible">true</property>
                   </object>
