--- a/lib/dspy-method-view.ui
+++ b/lib/dspy-method-view.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
   <requires lib="gtk+" version="3.22"/>
-  <template class="DspyMethodView" parent="DzlBin">
+  <template class="DspyMethodView" parent="GtkBin">
     <child>
       <object class="GtkGrid">
         <property name="column-spacing">12</property>
