--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -5,7 +5,7 @@
   <template class="DspyView" parent="GtkBin">
     <property name="can_focus">False</property>
     <child>
-      <object class="DzlMultiPaned">
+      <object class="DspyMultiPaned">
         <property name="orientation">horizontal</property>
         <property name="visible">True</property>
         <child>
@@ -118,7 +118,7 @@
             <property name="hexpand">true</property>
             <property name="visible">true</property>
             <child>
-              <object class="DzlEmptyState">
+              <object class="DspyEmptyState">
                 <property name="icon-name">org.gnome.dfeet-symbolic</property>
                 <property name="title" translatable="yes">Select a Bus Name</property>
                 <property name="subtitle" translatable="yes">Select a bus name to introspect the peer.</property>
@@ -164,7 +164,7 @@
                       </object>
                     </child>
                     <child>
-                      <object class="DzlBin">
+                      <object class="GtkEventBox">
                         <property name="visible">true</property>
                         <style>
                           <class name="inline-toolbar"/>
