--- a/lib/dspy-view.ui
+++ b/lib/dspy-view.ui
@@ -74,6 +74,9 @@
                 <child>
                   <object class="GtkMenuButton" id="menu_button">
                     <property name="focus-on-click">false</property>
+                    <style>
+                      <class name="flat"/>
+                    </style>
                     <property name="visible">true</property>
                     <child>
                       <object class="GtkImage">
