--- a/src/dspy-window.ui
+++ b/src/dspy-window.ui
@@ -2,21 +2,23 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
-  <template class="DspyWindow" parent="GtkApplicationWindow">
-    <property name="can_focus">False</property>
+  <template class="DspyWindow" parent="AdwApplicationWindow">
     <property name="default_width">600</property>
     <property name="default_height">300</property>
-    <child type="titlebar">
-      <object class="GtkHeaderBar" id="header_bar">
-        <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="title">D-Spy</property>
-        <property name="show_close_button">True</property>
-      </object>
-    </child>
+    <property name="title">D-Spy</property>
     <child>
-      <object class="DspyView" id="view">
-        <property name="visible">True</property>
+      <object class="GtkBox">
+        <property name="orientation">vertical</property>
+        <child>
+          <object class="GtkHeaderBar" id="header_bar">
+            <property name="show_title_buttons">True</property>
+          </object>
+        </child>
+        <child>
+          <object class="DspyView" id="view">
+            <property name="vexpand">true</property>
+          </object>
+        </child>
       </object>
     </child>
   </template>
